<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@id/Header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:shrinkColumns="1">
        <TableRow android:id="@id/ROW1" android:layout_height="wrap_content">
            <ImageView android:id="@id/WarningImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/mp_warning_32x32_n" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/IDA_CURL_INTERFACE_UNVERSER_2" android:editable="false" />
        </TableRow>
        <TableRow android:id="@id/ROW2">
            <TextView android:id="@id/ServerName" android:layout_column="1" android:text="@string/IDA_CURL_INTERFACE_SERVER" />
        </TableRow>
    </TableLayout>
    <View android:id="@id/Line1" android:background="#ff909090" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_span="3" />
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ScrollView android:id="@id/ServerName" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/Footer" android:layout_alignParentTop="true">
            <TextView android:id="@id/CertificateDetails" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/IDA_CERTIFICATE_DETAILS" />
        </ScrollView>
        <RelativeLayout android:gravity="bottom" android:id="@id/Footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <View android:id="@id/Line2" android:background="#ff909090" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            <TextView android:id="@id/TrustQuestion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/IDA_CURL_INTERFACE_TRUSTSER" android:layout_below="@id/Line2" />
            <Button android:id="@id/NeutralButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/IDA_CURL_INTERFACE_THISSESS" android:layout_below="@id/TrustQuestion" />
            <Button android:id="@id/NegativeButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/IDA_CURL_INTERFACE_NOSESS" android:layout_below="@id/NeutralButton" />
            <Button android:id="@id/PositiveButton" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/IDA_CURL_INTERFACE_ALLSESS" android:layout_below="@id/NegativeButton" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>